Remove preview args from record serialization tests