@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2020, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,9 +25,8 @@
  * @test
  * @summary Ensures that the serialization implementation can *always* access
  *          the record constructor
- * @compile --enable-preview -source ${jdk.version} ConstructorAccessTest.java
- * @run testng/othervm --enable-preview ConstructorAccessTest
- * @run testng/othervm/java.security.policy=empty_security.policy --enable-preview ConstructorAccessTest
+ * @run testng/othervm ConstructorAccessTest
+ * @run testng/othervm/java.security.policy=empty_security.policy ConstructorAccessTest
  */
 
 import java.io.ByteArrayInputStream;
