@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2020, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,8 +24,7 @@
 /*
  * @test
  * @summary Tests for stream references
- * @compile --enable-preview -source ${jdk.version} StreamRefTest.java
- * @run testng/othervm --enable-preview StreamRefTest
+ * @run testng/othervm StreamRefTest
  */
 
 import java.io.ByteArrayInputStream;
