@@ -25,8 +25,7 @@
  * @test
  * @bug 8238763
  * @summary ObjectInputStream readUnshared method handling of Records
- * @compile --enable-preview -source ${jdk.version} UnsharedTest.java
- * @run testng/othervm --enable-preview UnsharedTest
+ * @run testng/othervm UnsharedTest
  */
 
 import java.io.ByteArrayInputStream;
